--- a/kassid.html
+++ b/kassid.html
@@ -12,7 +12,7 @@
             <div id = 'banner-content'>
                 <table id = bannerlayout>
                     <tr>
-                        <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik: Loomade pesa</h1></a></td>
+                        <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik : Loomade pesa</h1></a></td>
                         <td id=nupud>
                             <table id=menu>
                                 <tr>
@@ -31,307 +31,307 @@
             <div class="pildid">
             <div class="animal" style="--bg: url(pildid/kassid/annabel.jpg)">
                 <div class="content">
-                    <h2 class="name">ANNABEL</h2>
+                    <h2 class="name">Annabel</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/baruto.jpg)">
                 <div class="content">
-                    <h2 class="name">BARUTO</h2>
+                    <h2 class="name">Baruto</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/belks.jpg)">
                 <div class="content">
-                    <h2 class="name">BELKS</h2>
+                    <h2 class="name">Belks</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/cataleya.jpg)">
                 <div class="content">
-                    <h2 class="name">CATALEYA</h2>
+                    <h2 class="name">Cataleya</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/daniel.jpg)">
                 <div class="content">
-                    <h2 class="name">DANIEL</h2>
+                    <h2 class="name">Daniel</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/danpoldroos.jpg)">
                 <div class="content">
-                    <h2 class="name">DAN PÕLDROOS</h2>
+                    <h2 class="name">Dan Põldroos</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/fjodor.jpg)">
                 <div class="content">
-                    <h2 class="name">FJODOR</h2>
+                    <h2 class="name">Fjodor</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/frederika.jpg)">
                 <div class="content">
-                    <h2 class="name">FREDERIKA</h2>
+                    <h2 class="name">Frederika</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/kata.jpg)">
                 <div class="content">
-                    <h2 class="name">KATA</h2>
+                    <h2 class="name">Kata</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/kiisumiisu.jpg)">
                 <div class="content">
-                    <h2 class="name">KIISU-MIISU</h2>
+                    <h2 class="name">Kiisu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/kosta.jpg)">
                 <div class="content">
-                    <h2 class="name">KOSTA</h2>
+                    <h2 class="name">Kosta</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/krista.jpg)">
                 <div class="content">
-                    <h2 class="name">KRISTA</h2>
+                    <h2 class="name">Krista</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/leelo.jpg)">
                 <div class="content">
-                    <h2 class="name">LEELO</h2>
+                    <h2 class="name">Leelo</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/lenna.jpg)">
                 <div class="content">
-                    <h2 class="name">LENNA</h2>
+                    <h2 class="name">Lenna</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/madli.jpg)">
                 <div class="content">
-                    <h2 class="name">MADLI</h2>
+                    <h2 class="name">Madli</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/maiu.jpg)">
                 <div class="content">
-                    <h2 class="name">MAIU</h2>
+                    <h2 class="name">Maiu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/mannu.jpg)">
                 <div class="content">
-                    <h2 class="name">MANNU</h2>
+                    <h2 class="name">Mannu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/martin.jpg)">
                 <div class="content">
-                    <h2 class="name">MARTIN</h2>
+                    <h2 class="name">Martin</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/mary.jpg)">
                 <div class="content">
-                    <h2 class="name">MARY</h2>
+                    <h2 class="name">Mary</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/maximus.jpg)">
                 <div class="content">
-                    <h2 class="name">MAXIMUS</h2>
+                    <h2 class="name">Maximus</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/melania.jpg)">
                 <div class="content">
-                    <h2 class="name">MELANIA</h2>
+                    <h2 class="name">Melania</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/miku.jpg)">
                 <div class="content">
-                    <h2 class="name">MIKU</h2>
+                    <h2 class="name">Miku</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/neti.jpg)">
                 <div class="content">
-                    <h2 class="name">NETI</h2>
+                    <h2 class="name">Neti</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/niki.jpg)">
                 <div class="content">
-                    <h2 class="name">NIKI</h2>
+                    <h2 class="name">Niki</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/oriana.jpg)">
                 <div class="content">
-                    <h2 class="name">ORIANA</h2>
+                    <h2 class="name">Oriana</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/palle.jpg)">
                 <div class="content">
-                    <h2 class="name">PALLE</h2>
+                    <h2 class="name">Palle</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/pandora.jpg)">
                 <div class="content">
-                    <h2 class="name">PANDORA</h2>
+                    <h2 class="name">Pandora</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/paul.jpg)">
                 <div class="content">
-                    <h2 class="name">PAUL</h2>
+                    <h2 class="name">Paul</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/paula.jpg)">
                 <div class="content">
-                    <h2 class="name">PAULA</h2>
+                    <h2 class="name">Paula</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/pelageja.jpg)">
                 <div class="content">
-                    <h2 class="name">PELAGEJA</h2>
+                    <h2 class="name">Pelageja</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/pirjo.jpg)">
                 <div class="content">
-                    <h2 class="name">PIRJO</h2>
+                    <h2 class="name">Pirjo</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/pirtsu.jpg)">
                 <div class="content">
-                    <h2 class="name">PIRTSU</h2>
+                    <h2 class="name">Pirtsu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/queenie.jpg)">
                 <div class="content">
-                    <h2 class="name">QUEENIE</h2>
+                    <h2 class="name">Queenie</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/raivo.jpg)">
                 <div class="content">
-                    <h2 class="name">RAIVO</h2>
+                    <h2 class="name">Raivo</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/risto.jpg)">
                 <div class="content">
-                    <h2 class="name">RISTO</h2>
+                    <h2 class="name">Risto</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/saale.jpg)">
                 <div class="content">
-                    <h2 class="name">SAALE</h2>
+                    <h2 class="name">Saale</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/saima.jpg)">
                 <div class="content">
-                    <h2 class="name">SAIMA</h2>
+                    <h2 class="name">Saima</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/sass.jpg)">
                 <div class="content">
-                    <h2 class="name">SASS</h2>
+                    <h2 class="name">Sass</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/selina.jpg)">
                 <div class="content">
-                    <h2 class="name">SELINA</h2>
+                    <h2 class="name">Selina</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/signe.jpg)">
                 <div class="content">
-                    <h2 class="name">SIGNE</h2>
+                    <h2 class="name">Signe</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/siim.jpg)">
                 <div class="content">
-                    <h2 class="name">SIIM</h2>
+                    <h2 class="name">Siim</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/sille.jpg)">
                 <div class="content">
-                    <h2 class="name">SILLE</h2>
+                    <h2 class="name">Sille</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/sirle.jpg)">
                 <div class="content">
-                    <h2 class="name">SIRLE</h2>
+                    <h2 class="name">Sirle</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/solaris.jpg)">
                 <div class="content">
-                    <h2 class="name">SOLARIS</h2>
+                    <h2 class="name">Solaris</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/susanna.jpg)">
                 <div class="content">
-                    <h2 class="name">SUSANNA</h2>
+                    <h2 class="name">Susanna</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/süsi.jpg)">
                 <div class="content">
-                    <h2 class="name">SÜSI</h2>
+                    <h2 class="name">Süsi</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/suss.jpg)">
                 <div class="content">
-                    <h2 class="name">SUSS</h2>
+                    <h2 class="name">Suss</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/tiiu.jpg)">
                 <div class="content">
-                    <h2 class="name">TIIU</h2>
+                    <h2 class="name">Tiiu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/tinka.jpg)">
                 <div class="content">
-                    <h2 class="name">TINKA</h2>
+                    <h2 class="name">Tinka</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/tipa.jpg)">
                 <div class="content">
-                    <h2 class="name">TIPA</h2>
+                    <h2 class="name">Tipa</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/kassid/tommi.jpg)">
                 <div class="content">
-                    <h2 class="name">TOMMI</h2>
+                    <h2 class="name">Tommi</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
