--- a/kassid.html
+++ b/kassid.html
@@ -12,13 +12,13 @@
             <div id = 'banner-content'>
                 <table id = bannerlayout>
                     <tr>
-                        <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik : Loomade pesa</h1></a></td>
+                        <td id=pealkiri><a href="avaleht.html"><h1>Varjupaik: Loomade pesa</h1></a></td>
                         <td id=nupud>
                             <table id=menu>
                                 <tr>
-                                    <td id=koerad><a id=nupp  href="koerad.html">Koerad</a></td>
-                                    <td id=kassid><a id=nupp href="kassid.html">Kassid</a></td>
-                                    <td id=info><a id=nupp href="info.html">Enne võtmist</a></td>
+                                    <td id=koerad><a class=nupp  href="koerad.html">Koerad</a></td>
+                                    <td id=kassid><a class=nupp href="kassid.html">Kassid</a></td>
+                                    <td id=info><a class=nupp href="info.html">Enne võtmist</a></td>
                                 </tr>
                             </table>
                         </td>
