--- a/avaleht.html
+++ b/avaleht.html
@@ -16,9 +16,9 @@
                         <td id=nupud>
                             <table id=menu>
                                 <tr>
-                                    <td id=koerad><a id=nupp  href="koerad.html">Koerad</a></td>
-                                    <td id=kassid><a id=nupp href="kassid.html">Kassid</a></td>
-                                    <td id=info><a id=nupp href="info.html">Enne võtmist</a></td>
+                                    <td id=koerad><a class=nupp  href="koerad.html">Koerad</a></td>
+                                    <td id=kassid><a class=nupp href="kassid.html">Kassid</a></td>
+                                    <td id=info><a class=nupp href="info.html">Enne võtmist</a></td>
                                 </tr>
                             </table>
                         </td>
