--- a/koerad.html
+++ b/koerad.html
@@ -48,157 +48,157 @@
         <div class="pildid">
             <div class="animal" style="--bg: url(pildid/koerad/alfi.jpg)">
                 <div class="content">
-                    <h2 class="name">ALFI</h2>
+                    <h2 class="name">Alfi</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/bars.jpg)">
                 <div class="content">
-                    <h2 class="name">BARS</h2>
+                    <h2 class="name">Bars</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/bruno.jpg)">
                 <div class="content">
-                    <h2 class="name">BRUNO</h2>
+                    <h2 class="name">Bruno</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/dona.jpg)">
                 <div class="content">
-                    <h2 class="name">DONA</h2>
+                    <h2 class="name">Dona</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/k2tu.jpg)">
                 <div class="content">
-                    <h2 class="name">KÄTU</h2>
+                    <h2 class="name">Kätu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/kusti.jpg)">
                 <div class="content">
-                    <h2 class="name">KUSTI</h2>
+                    <h2 class="name">Kusti</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/kutt.jpg)">
                 <div class="content">
-                    <h2 class="name">KUTT</h2>
+                    <h2 class="name">Kutt</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/malviina.jpg)">
                 <div class="content">
-                    <h2 class="name">MALVIINA</h2>
+                    <h2 class="name">Malviina</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/mauri.jpg)">
                 <div class="content">
-                    <h2 class="name">MAURI</h2>
+                    <h2 class="name">Mauri</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/meida.jpg)">
                 <div class="content">
-                    <h2 class="name">MEIDA</h2>
+                    <h2 class="name">Meida</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/naima.jpg)">
                 <div class="content">
-                    <h2 class="name">NAIMA</h2>
+                    <h2 class="name">Naima</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/paavel.jpg)">
                 <div class="content">
-                    <h2 class="name">PAAVEL</h2>
+                    <h2 class="name">Paavel</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/poiss.jpg)">
                 <div class="content">
-                    <h2 class="name">POISS</h2>
+                    <h2 class="name">Poiss</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/polster.jpg)">
                 <div class="content">
-                    <h2 class="name">POLSTER</h2>
+                    <h2 class="name">Polster</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/poncik.jpg)">
                 <div class="content">
-                    <h2 class="name">PONCIK</h2>
+                    <h2 class="name">Poncik</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/renate.jpg)">
                 <div class="content">
-                    <h2 class="name">RENATE</h2>
+                    <h2 class="name">Renate</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/rex.jpg)">
                 <div class="content">
-                    <h2 class="name">REX</h2>
+                    <h2 class="name">Rex</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/robi.jpg)">
                 <div class="content">
-                    <h2 class="name">ROBI</h2>
+                    <h2 class="name">Robi</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/sammy.jpg)">
                 <div class="content">
-                    <h2 class="name">SAMMY</h2>
+                    <h2 class="name">Sammy</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/semu.jpg)">
                 <div class="content">
-                    <h2 class="name">SEMU</h2>
+                    <h2 class="name">Semu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/sihvka.jpg)">
                 <div class="content">
-                    <h2 class="name">SIHVKA</h2>
+                    <h2 class="name">Sihvka</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/timmi.jpg)">
                 <div class="content">
-                    <h2 class="name">TIMMI</h2>
+                    <h2 class="name">Timmi</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/triinu.jpg)">
                 <div class="content">
-                    <h2 class="name">TRIINU</h2>
+                    <h2 class="name">Triinu</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/välek.jpg)">
                 <div class="content">
-                    <h2 class="name">VÄLEK</h2>
+                    <h2 class="name">Välek</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/vello.jpg)">
                 <div class="content">
-                    <h2 class="name">VELLO</h2>
+                    <h2 class="name">Vello</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
             <div class="animal" style="--bg: url(pildid/koerad/volli.jpg)">
                 <div class="content">
-                    <h2 class="name">VOLLI</h2>
+                    <h2 class="name">Volli</h2>
                     <p class="desc">Tartu Koduta Loomade Varjupaik</p>
                 </div>
             </div>
