--- a/kassid.html
+++ b/kassid.html
@@ -7,6 +7,7 @@
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="loomad.css">
     </head>
+    
     <body class=taustapilt>
         <div id='banner' class = 'shadow'>
             <div id = 'banner-content'>
@@ -28,7 +29,7 @@
         </div>
         <h1 class="title">Kassid kodu ootel</h1>
         <div class="gallery">
-            <div class="pildid">
+            <div class="">
             <div class="animal" style="--bg: url(pildid/kassid/annabel.jpg)">
                 <div class="content">
                     <h2 class="name">ANNABEL</h2>
