muutsin piltide suurused

--- a/info.html
+++ b/info.html
@@ -46,7 +46,7 @@
 
         <div class="gallery">
             <div class="pildid">
-            <div class="info" style="--bg: url(pildid/info/vastutus.jpg)">
+            <div class="info" style="--bg: url(pildid/info/vastutus2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Vastutus</h2>
                     <p class="desc">Looma pidamine on pikaks ajaks suure vastutuse võtmine. Kahjuks kiputakse tihti seda unustama.
@@ -54,7 +54,7 @@
                         tuleb juba varem muuta looma jaoks sobivaks ning siis hoida ka seda sellisena. Loomaga tuleb pidevalt arvestada.</p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/eeltöö.jpg)">
+            <div class="info" style="--bg: url(pildid/info/eeltöö2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Eeltöö</h2>
                     <p>Tee kindlaks, et sul on olemas kõik vajalikud teadmised. Milliseid esemeid ning toitu loom vajab? Kui palju tähelepanu?
@@ -63,7 +63,7 @@
                     </p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/raha.jpg)">
+            <div class="info" style="--bg: url(pildid/info/raha2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Väljaminekud</h2>
                     <p class="desc">Isegi kui saate lemmiklooma tasuta, peate arvestama edaspidi igapäevaste toidukuludega.
@@ -71,14 +71,14 @@
                         Teie pere ei rõõmusta kindlasti ka selle üle, kui koer on ainus, kes alati paremad palad saab.</p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/aeg.jpg)">
+            <div class="info" style="--bg: url(pildid/info/aeg2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Aeg</h2>
                     <p class="desc">Loomad nõuavad pühendumist ja aega. Veenduge, et olete võimelised seda pakkuma. Lemmikloom nõuab igapäevast hoolt - ka laupäeval, pühapäeval ning puhkuse ajal. 
                         Kas igapäevane hooldus sobib teie praeguse elustiiliga või oleks vaja muuta oma harjumusi? Kas olete sageli kodust ära või mitmeid päevi järjest? Mõtisklege enne looma võtmist nende küsimuste üle.<p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/allergiad.jpg)">
+            <div class="info" style="--bg: url(pildid/info/allergiad2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Allergiad</h2>
                     <p class="desc">Hoidke loomad vannitubadest, diivanitelt ja tugitoolidest eemal
@@ -88,7 +88,7 @@
                         ärge kallistage ega musitage looma, et vältida otsest kokkupuudet silmade ja hingamisteedega.</p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/treenimine.jpg)">
+            <div class="info" style="--bg: url(pildid/info/treenimine2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Treening</h2>
                     <p class="desc">Looma tuleb pidevalt distsiplineerida ja õpetada. Koerale põhikäskluste ja -märguannete õpetamine on teile mõlemale tore ning rahuldust pakkuv kogemus.
