nav bar parandus

--- a/info.html
+++ b/info.html
@@ -28,14 +28,10 @@
                 <table id = bannerlayout>
                     <tr>
                         <td id=pealkiri><a class="nupp" href="javascript:delay('avaleht.html')">Varjupaik: Loomade pesa</a></td>
-                        <td id=nupud>
-                            <table id=menu>
-                                <tr>
-                                    <td id=koerad><a class=nupp  href="javascript:delay('koerad.html')">Koerad</a></td>
-                                    <td id=kassid><a class=nupp href="javascript:delay('kassid.html')">Kassid</a></td>
-                                    <td id=info><a class=nupp href="javascript:delay('info.html')">Enne võtmist</a></td>
-                                </tr>
-                            </table>
+                        <td id=nupud style="display: flex; flex-flow: row wrap; justify-content: flex-end; margin-right: 0;">
+                            <a class="nupp menunupp" href="javascript:delay('koerad.html')">Koerad</a>
+                            <a class="nupp menunupp"  href="javascript:delay('kassid.html')">Kassid</a>
+                            <a class="nupp menunupp"  href="javascript:delay('info.html')">Enne võtmist</a>
                         </td>
                     </tr>
                 </table>   
