header korda, infolehe paigutus, fondid

--- a/avaleht.html
+++ b/avaleht.html
@@ -35,7 +35,8 @@
                 </table>   
             </div>
         </div>
-        <div class=infotekst id=madalamal>
+
+        <div class=infotekst>
             <p>Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
         </div>
         <div id=loomadnupud class=kaart>
@@ -137,7 +138,7 @@
             <div id=footer-content>
                 <p class= footertekst>See lehekülg valmis sissejuhatus erialasse projekti raames</p>
             </div>
-        </div>    
+        </div>  
         <script  src="script.js"></script>
 
     </body>
