pildid avalehel korda

--- a/avaleht.html
+++ b/avaleht.html
@@ -39,19 +39,11 @@
         <div class=infotekst>
             <p>Oleme siia erinevatest Eesti varjupaikadest kokku kogunud kodu otsivate loomade andmed.</p>
         </div>
-        <div id=loomadnupud class=kaart>
-            <table id=loomadenupud >
-                <tr>
-                    <td><br></td>
-                    <td class=keskelvasakul>
-                        <a class="nupp" class='pilt' href="javascript:delay('koerad.html')"><img class=piltnupp src="pildid/koerad.jpg" alt="Koerad"><div class=overlay><img src="pildid/fade.png" alt="Koeradfade"></div><div class=centered><p class=nuputekst>Vaatan <p class=nupunumber>26</p><p class=nuputekst>koera</p></div></a> 
-                    </td>
-                    <td class=keskelparemal>
-                        <a class="nupp" class ='pilt' href="javascript:delay('kassid.html')"><img class=piltnupp src="pildid/kassid.jpg" alt="Kassid"><div class=overlay><img src="pildid/fade.png" alt="Kassidfade"></div><div class=centered><p class=nuputekst>Vaatan <p class=nupunumber>51</p><p class=nuputekst>kassi</p></div></a>
-                    </td>
-                    <td><br></td>
-                </tr>
-            </table>
+        <div class=kaart>
+            <div id=loomadnupud>
+                <a class="nupp pilt" href="javascript:delay('koerad.html')"><img class=piltnupp src="pildid/koerad.jpg" alt="Koerad"><div class=overlay><img src="pildid/fade.png" alt="Koeradfade"></div><div class=centered><p class=nuputekst>Vaatan <p class=nupunumber>26</p><p class=nuputekst>koera</p></div></a> 
+                <a class="nupp pilt" href="javascript:delay('kassid.html')"><img class=piltnupp src="pildid/kassid.jpg" alt="Kassid"><div class=overlay><img src="pildid/fade.png" alt="Kassidfade"></div><div class=centered><p class=nuputekst>Vaatan <p class=nupunumber>51</p><p class=nuputekst>kassi</p></div></a>
+            </div>
         </div>
         <br>
         <div class=infotekst>
