info vahelehe piltide parandus

--- a/info.html
+++ b/info.html
@@ -3,7 +3,7 @@
 <meta charset="UTF-8">
 
     <head> 
-        <title>Kassid</title>
+        <title>Enne võtmist</title>
         <link rel="stylesheet" href="style.css">
         <link rel="stylesheet" href="info.css">
     </head>
@@ -41,7 +41,7 @@
         <h1 class="title">Hea teada enne looma võtmist</h1>
 
         <div class="gallery">
-            <div class="info" style="--bg: url(pildid/info/vastutus2.jpg)">
+            <div class="info" style="--bg: url(pildid/info/vastutus2.png)">
                 <div class="content">
                     <h2 class="pealkiri">Vastutus</h2>
                     <p class="desc">Looma pidamine on pikaks ajaks suure vastutuse võtmine. Kahjuks kiputakse tihti seda unustama.
@@ -52,13 +52,13 @@
             <div class="info" style="--bg: url(pildid/info/eeltöö2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Eeltöö</h2>
-                    <p>Tee kindlaks, et sul on olemas kõik vajalikud teadmised. Milliseid esemeid ning toitu loom vajab? Kui palju tähelepanu?
-                        Kas loomal on mingeid kaasuvaid haiguseid? Kuidas haige looma eest hoolt kanda?
-                        Milline on looma kehakeel? Looma iseärususeid tuleb õppima tundma. Tehke endale asjad enne looma võtmist selgeks.
+                    <p>Lemmikloomad pakuvad meile tingimusteta truudust, pidevat seltskonda ja leevendavad stressi pärast rasket tööpäeva.
+                        Kuid karvakera kasvab suureks, võib teha pahandusi, nõuab aega ja raha ning tema elu ja heaolu eest vastutate kuni tema elu lõpuni just teie.
+                        Sellepärast on vajalik enne teha „kodutööd” ja looma soetamine peab olema terve pere ühine, teadlik ja kindel otsus.
                     </p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/raha2.jpg)">
+            <div class="info" style="--bg: url(pildid/info/raha2.png)">
                 <div class="content">
                     <h2 class="pealkiri">Väljaminekud</h2>
                     <p class="desc">Isegi kui saate lemmiklooma tasuta, peate arvestama edaspidi igapäevaste toidukuludega.
@@ -66,7 +66,7 @@
                         Teie pere ei rõõmusta kindlasti ka selle üle, kui koer on ainus, kes alati paremad palad saab.</p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/aeg2.jpg)">
+            <div class="info" style="--bg: url(pildid/info/aeg3.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Aeg</h2>
                     <p class="desc">Loomad nõuavad pühendumist ja aega. Veenduge, et olete võimelised seda pakkuma. Lemmikloom nõuab igapäevast hoolt - ka laupäeval, pühapäeval ning puhkuse ajal. 
@@ -83,7 +83,7 @@
                         ärge kallistage ega musitage looma, et vältida otsest kokkupuudet silmade ja hingamisteedega.</p>
                 </div>
             </div>
-            <div class="info" style="--bg: url(pildid/info/treenimine2.jpg)">
+            <div class="info" style="--bg: url(pildid/info/treening.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Treening</h2>
                     <p class="desc">Looma tuleb pidevalt distsiplineerida ja õpetada. Koerale põhikäskluste ja -märguannete õpetamine on teile mõlemale tore ning rahuldust pakkuv kogemus.
