lisasin lingid info vahelehele

--- a/info.html
+++ b/info.html
@@ -46,15 +46,21 @@
                     <h2 class="pealkiri">Vastutus</h2>
                     <p class="desc">Looma pidamine on pikaks ajaks suure vastutuse võtmine. Kahjuks kiputakse tihti seda unustama.
                         Vastutus looma eest algab tegelikult veel enne tema saabumist uude koju. Kodu
-                        tuleb juba varem muuta looma jaoks sobivaks ning siis hoida ka seda sellisena. Loomaga tuleb pidevalt arvestada.</p>
+                        tuleb juba varem muuta looma jaoks sobivaks ning siis hoida ka seda sellisena. Loomaga tuleb pidevalt arvestada.
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://majandus.postimees.ee/405575/margid-et-teie-pere-on-lemmiklooma-votuks-valmis" target="_blank">siit</a>.
+                    </p>
                 </div>
             </div>
             <div class="info" style="--bg: url(pildid/info/eeltöö2.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Eeltöö</h2>
-                    <p>Lemmikloomad pakuvad meile tingimusteta truudust, pidevat seltskonda ja leevendavad stressi pärast rasket tööpäeva.
-                        Kuid karvakera kasvab suureks, võib teha pahandusi, nõuab aega ja raha ning tema elu ja heaolu eest vastutate kuni tema elu lõpuni just teie.
+                    <p>Kui karvakera kasvab suureks, võib teha pahandusi, nõuab aega ja raha ning tema elu ja heaolu eest vastutate kuni tema elu lõpuni just teie.
                         Sellepärast on vajalik enne teha „kodutööd” ja looma soetamine peab olema terve pere ühine, teadlik ja kindel otsus.
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://www.kassiabi.ee/infonurk/kassi-votmine/enne-looma-votmist/" target="_blank">siit</a>.
                     </p>
                 </div>
             </div>
@@ -62,15 +68,21 @@
                 <div class="content">
                     <h2 class="pealkiri">Väljaminekud</h2>
                     <p class="desc">Isegi kui saate lemmiklooma tasuta, peate arvestama edaspidi igapäevaste toidukuludega.
-                        Oleks tark teha kindlaks, kui suureks need kulud kujunevad ja kas need võiksid kujuneda koormaks teie leibkonna eelarvele. 
-                        Teie pere ei rõõmusta kindlasti ka selle üle, kui koer on ainus, kes alati paremad palad saab.</p>
+                        Oleks tark teha kindlaks, kui suureks need kulud kujunevad ja kas need võiksid kujuneda koormaks teie leibkonna eelarvele.
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://www.err.ee/925149/suur-ulevaade-lemmikloomad-on-omanikele-kallid-igas-mottes" target="_blank">siit</a>.</p>
                 </div>
             </div>
             <div class="info" style="--bg: url(pildid/info/aeg3.jpg)">
                 <div class="content">
                     <h2 class="pealkiri">Aeg</h2>
-                    <p class="desc">Loomad nõuavad pühendumist ja aega. Veenduge, et olete võimelised seda pakkuma. Lemmikloom nõuab igapäevast hoolt - ka laupäeval, pühapäeval ning puhkuse ajal. 
-                        Kas igapäevane hooldus sobib teie praeguse elustiiliga või oleks vaja muuta oma harjumusi? Kas olete sageli kodust ära või mitmeid päevi järjest? Mõtisklege enne looma võtmist nende küsimuste üle.<p>
+                    <p class="desc">Erinevad loomaliigid soovivad erineval määral tähelepanu.
+                        Kui sina ja su pere veedavad suure osa päevast kodust eemal ning õhtul olete pigem väsinud ega soovi enam millegi aktiivsega tegeleda, siis sobib teile lemmikuks loom, kes eelistab omaette toimetada.
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://lemmikloom.delfi.ee/artikkel/89884661/8-kusimust-mille-peaksid-endale-esitama-enne-lemmiklooma-votmist" target="_blank">siit</a>.
+                        <p>
                 </div>
             </div>
             <div class="info" style="--bg: url(pildid/info/allergiad2.jpg)">
@@ -78,9 +90,12 @@
                     <h2 class="pealkiri">Allergiad</h2>
                     <p class="desc">Hoidke loomad vannitubadest, diivanitelt ja tugitoolidest eemal
                         eemaldage vaipkatted, kuhu võib koguneda suurel hulgal allergeene.
-                        Paluge inimesel, kellel allergiat ei esine, harjata looma vähemalt kord nädalas majast väljas
-                        vahetage tihti voodipesu ning kasutage hüpoallergeenseid madratseid ja patju
-                        ärge kallistage ega musitage looma, et vältida otsest kokkupuudet silmade ja hingamisteedega.</p>
+                        Paluge inimesel, kellel allergiat ei esine, harjata looma vähemalt kord nädalas majast väljas.
+                        Vahetage tihti voodipesu ning kasutage hüpoallergeenseid madratseid ja patju.
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://www.polti.ee/loomaallergia-kuidas-seda-ara-tunda-ja-end-kaitsta/" target="_blank">siit</a>.
+                    </p>
                 </div>
             </div>
             <div class="info" style="--bg: url(pildid/info/treening.jpg)">
@@ -88,7 +103,11 @@
                     <h2 class="pealkiri">Treening</h2>
                     <p class="desc">Looma tuleb pidevalt distsiplineerida ja õpetada. Koerale põhikäskluste ja -märguannete õpetamine on teile mõlemale tore ning rahuldust pakkuv kogemus.
                         Oluline on alustada treenimist maast madalast, et rajada õige vundament, enne kui kutsikas kasvab suureks.
-                        Kutsika ja koera koolitamine on suurepärane viis veeta koos aega ning see pakub palju rõõmu!</p>
+                        Kutsika ja koera koolitamine on suurepärane viis veeta koos aega ning see pakub palju rõõmu!
+                        <br>
+                        <br>
+                        Rohkem infot vastava teema kohta leiab <a href="https://www.purina.ee/koerad/kaitumine-ja-treenimine/koera-treenimine/koerale-pohikaskluste-opetamine" target="_blank">siit</a>.
+                    </p>
                 </div>
             </div>
 
